--- a/index.html
+++ b/index.html
@@ -23,10 +23,38 @@
               <option>Da whole fam</option>
             </select>
             <button type="submit" class="btn">Add</button>
+          </div>
+          <div class="col-md-6">
+            <h2>Select Your Toppings</h2>
+            <div class="radio">
+              <label>
+                <input type="radio" name="topping" value="Artichoke" checked>
+                Artichoke
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="topping" value="Olives">
+                Olives
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="topping" value="Pineapple">
+                Pineapple
+              </label>
+            </div>
+            <button type="submit" class="btn">Add</button>
+
+          </div>
+        </div>
       </form>
 
       <h2>Your Order:
         <p><span id="size-result"></span></p>
+        <br>
+        <p><span id="toppingze-result"></span></p>
+
 
 
 
