add pizza constructor with properties for topping, size, and price and price prototype with if statments to adjust the price of the pizza. radio selector for toppings not yet functional.

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <form id ="size">
         <div class="row">
           <div class="col-md-6">
-            <h2>How many folks are you feeding?</h2>
+            <h2>Select your size:</h2>
             <select class="form-control" id="pizza-size">
               <option></option>
-              <option>Single</option>
-              <option>Bae and I</option>
-              <option>A few</option>
-              <option>Da whole fam</option>
+              <option>Small</option>
+              <option>Medium</option>
+              <option>Large</option>
+              <option>XL</option>
             </select>
             <button type="submit" class="btn">Add</button>
           </div>
@@ -32,6 +32,7 @@
                 Artichoke
               </label>
             </div>
+
             <div class="radio">
               <label>
                 <input type="radio" name="topping" value="Olives">
@@ -44,6 +45,7 @@
                 Pineapple
               </label>
             </div>
+            
             <button type="submit" class="btn">Add</button>
 
           </div>
