add arguments in UI for constructor parameters and new Pizza variable

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <h1>GIMME PIZZA!</h1>
 
-      <form id ="size">
+      <form id ="pizza-builder">
         <div class="row">
           <div class="col-md-6">
             <h2>Select your size:</h2>
@@ -22,7 +22,6 @@
               <option>Large</option>
               <option>XL</option>
             </select>
-            <button type="submit" class="btn">Add</button>
           </div>
           <div class="col-md-6">
             <h2>Select Your Toppings</h2>
@@ -45,10 +44,9 @@
                 Pineapple
               </label>
             </div>
-            
-            <button type="submit" class="btn">Add</button>
 
           </div>
+          <button type="submit" class="btn">Submit</button>
         </div>
       </form>
 
