--- a/index.html
+++ b/index.html
@@ -24,14 +24,22 @@
             </select>
           </div>
           <div class="col-md-6">
-            <h2>Select Your Toppings</h2>
+            <h2>Select your topping:</h2>
+            <select class="form-control" id="topping">
+              <option></option>
+              <option>Artichoke</option>
+              <option>Feta</option>
+              <option>Olives</option>
+              <option>Pineapple</option>
+            </select>
+          </div>
+            <!-- <h2>Select Your Toppings</h2>
             <div class="radio">
               <label>
                 <input type="radio" name="topping" value="Artichoke" checked>
                 Artichoke
               </label>
             </div>
-
             <div class="radio">
               <label>
                 <input type="radio" name="topping" value="Olives">
@@ -43,7 +51,7 @@
                 <input type="radio" name="topping" value="Pineapple">
                 Pineapple
               </label>
-            </div>
+            </div> -->
 
           </div>
           <button type="submit" class="btn">Submit</button>
@@ -53,7 +61,7 @@
       <h2>Your Order:
         <p><span id="size-result"></span></p>
         <br>
-        <p><span id="toppingze-result"></span></p>
+        <p><span id="topping-result"></span></p>
 
 
 
