add both size and topping to correctly display.

--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
         </div>
       </form>
 
-      <h2>Your Order:
-        <p><span id="size-result"></span></p>
+      <h2>Your Order:</h2>
+        <p>Size:<span id="size-result"></span></p>
         <br>
-        <p><span id="topping-result"></span></p>
+        <p>Topping:<span id="topping-result"></span></p>
+        <br>
+        <p>Price: $<span id="price-result"></span></p>
 
 
 
