add a working pizza price prototype.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <br>
         <p>Topping:<span id="topping-result"></span></p>
         <br>
-        <p>Price: $<span id="price-result"></span></p>
+        <p>Price: $<span id="pizza-price"></span></p>
 
 
 
