--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/skeleton.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/scripts.js"></script>
+    <script type="text/javascript" script-name="advent-pro" src="http://use.edgefonts.net/advent-pro.js"></script>
     <title>PIZZA</title>
   </head>
   <body>
     <div class="container">
-      <h1>GIMME PIZZA!</h1>
-
+      <h1 id ="biz-name">GIMME PIZZA!</h1>
       <form id ="pizza-builder">
         <div class="row">
           <div class="col-md-6">
@@ -33,13 +34,10 @@
               <option>Pineapple</option>
             </select>
           </div>
-        
-
-          </div>
-          <button type="submit" class="btn">Submit</button>
+        </div>
+          <button type="submit" class="btn" id="button">Submit</button>
         </div>
       </form>
-
       <h2>Your Order:</h2>
         <p>Size:<span id="size-result"></span></p>
         <br>
