add more custom css.

--- a/index.html
+++ b/index.html
@@ -38,13 +38,21 @@
           <button type="submit" class="btn" id="button">Submit</button>
         </div>
       </form>
+      <br>
+      <div class="row" id="results">
+        <div class="col-sm-3">
       <h2>Your Order:</h2>
-        <p>Size:<span id="size-result"></span></p>
-        <br>
-        <p>Topping:<span id="topping-result"></span></p>
-        <br>
+    </div>
+    <div class="col-sm-3">
+        <p>Size: <span id="size-result"></span></p>
+      </div>
+      <div class="col-sm-3">
+        <p>Topping: <span id="topping-result"></span></p>
+      </div>
+      <div class="col-sm-3">
         <p>Price: $<span id="pizza-price"></span></p>
-
+      </div>
+    </div>
 
 
 
