add box model, tried to animate text.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 id ="biz-name">GIMME PIZZA!</h1>
+<h1 id ="biz-name">GIMME PIZZA!</h1>
       <form id ="pizza-builder">
         <div class="row">
           <div class="col-md-6">
@@ -40,28 +40,13 @@
       </form>
       <br>
       <div class="row" id="results">
-        <div class="col-sm-3">
-      <h2>Your Order:</h2>
-    </div>
-    <div class="col-sm-3">
+        <div class="col-sm-12">
+      <h2><u>Your Order</u></h2>
         <p>Size: <span id="size-result"></span></p>
-      </div>
-      <div class="col-sm-3">
         <p>Topping: <span id="topping-result"></span></p>
-      </div>
-      <div class="col-sm-3">
         <p>Price: $<span id="pizza-price"></span></p>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
     </div>
   </body>
 </html>
